sonarqube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarqube.ingress
  annotations:
    certmanager.io/cluster-issuer: letsencrypt-prod    # Specifies the Cluster Issuer to use
    acme.cert-manager.io/http01-edit-in-place: "true"  # Tells Cert-Manager to override this ingress temporarily
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - sonarqube.domain.com
      secretName: tls-domain-sonarqube
  rules:
  - host: sonarqube.domain.com
    http:
      paths:
        - backend:
            serviceName: sonarqube
            servicePort: 80
